fix positioning of social media icons on mobile
so that view and edit mode match

--- a/src/css/profile/profile-only.less
+++ b/src/css/profile/profile-only.less
@@ -24,9 +24,6 @@
     }
 
     .social-media {
-      a {
-        margin: 0 1px;
-      }
       i {
         @media (min-width: @screen-sm) {
           margin-left: @std-padding/4;
